Fri Aug 15 17:38:41 2014  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: update the feedback info to be more within 
	  reality.  Don't use ghelp: urls as those won't work in the HTML
	  version.

	* src/eval.c: do the same thing for vector building notation as
	  in all for/sum/prod loops, where if going over floats, allow
	  errors withing the final number to within 2^-20 of the step size.

	* src/geniustests.txt: add tests for above

	* src/genius-readline-helper.c: avoid a race in display of errors,
	  by flushing and waiting 5 miliseconds after readline and before
	  sending the line onwards to the GUI

Thu Aug 14 00:54:57 2014  Jiri (George) Lebl <jirka@5z.com>

	* lib/equation_solving/diffyqs.gel: slight optimization for
	  RungeKutta and RungeKuttaFull

Wed Aug 13 18:41:27 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix using a single point in LinePlotDrawPoints if
	  using a matrix of points.  Also allow null matrix in
	  LinePlotDrawPoints and LinePlotDrawLine which makes it a no-op

Wed Aug 13 17:06:29 2014  Jiri (George) Lebl <jirka@5z.com>

	 * gtkextra/gtkplotdata.c: Fix drawing data with no connector, then
	   plot the points only, also fix plotting data with one value only,
	   finally fix clipping if both endpoints of a segment are out of
	   bounds.

	 * src/graphing.c: Add LinePlotDrawPoints function

	 * help/C/genius.xml: Document LinePlotDrawPoints, Also add
	   documentation and examples for EulersMethodFull and RungeKuttaFull
	   on how to use LinePlotDrawLine or LinePlotDrawPoints.  YELP IS
	   BROKEN so the links don't work.  The reason for shouting here
	   is that filing bugs for yelp is useless (these bugs have been filed
	   for well over a year, and nobody touched them at all).  I'm
	   thinking of just installing html docs.  Actually I'm thinking of
	   moving away from this incredibly broken DocBook nonsense and
	   moving to LaTeX, where I could actually do more math to explain