@@ -6,6 +6,8 @@ Changes to 1.0.18
 * New plotting functions: PlotCanvasFreeze/PlotCanvasThaw to improve flicker
   if doing animations with genius, LinePlotDrawPoints function to draw just
   points without the line
+* While plotting errors are no longer forced into a dialog, and presence
+  of errors is indicated in the graph window below the graph
 * Allow setting color in LinePlotDrawLine with RGB vector.
 * When the vector building notation is done with floats and the final
   number is within 2^-20 times the step size of the goal,
